a1/brendan_gordon/TEST_PROGRAMS/invalidtype/armin_taheri/invalidtype1.min
print "This should" + --3 - "not print";

